Pan-Hispanism for Spain
- Added Pan-Hispanism decision for Spain, which can be enacted if Spain holds or is sphere leader of Latin America
- If Pan-Hispanism is adopted, Latin American and Iberian countries can join the Latin Monetary Union
- If Pan-Hispanism is adopted, Latin Customs Union can be created by Spain and joined by any Iberian or Latam country in Spanish sphere
-

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3440,3 +3440,9 @@ question_of_administration2_desc;The territorial reorganisation by department le
 question_of_administration2_title;Question of Representation and Local Autonomy;;;;;;;;;;;;;x
 question_of_language_title;The Question of Language;;;;;;;;;;;;;x
 question_of_language_desc;At the root of all major languages and dialects spoken in our country is Latin. In 16th century, Kingdom of France successfully standardized the French language in northern France. However, in Occitania, Italy and Iberia, situation is quite different. Regional dialects are many, and we must decide how to solve this question. Nonetheless, we shall gather the best of our linguistic minds in the entire country to find the most optimal solution.;;;;;;;;;;;;;x
+latin_customs_union_SPA_title;Form Latin Customs Union;;;;;;;;;;;;;x
+latin_customs_union_SPA_desc;Now that we have standardized Monetary and Coining policy with friendly Hispanic countries, next step towards integration of our economies would be synchronizing our economies through joint customs and duties;;;;;;;;;;;;;x
+latin_customs_union_SPA_min_title;Join Latin Customs Union;;;;;;;;;;;;;x
+latin_customs_union_SPA_min_desc;Next step towards integration of our economies would be synchronizing our economies through joint customs and duties;;;;;;;;;;;;;x
+embrace_pan_hispanism_desc;After the Napolenic wars, the Spanish world fractured. The culture and language of the Old Country and its former colonies started going separate ways. But, our bonds are inextricably linked and unseparable. Now that we have influence in Latin America again, we should strive forward to keep La Raza united culturally, as well as economically.;;;;;;;;;;;;;x
+embrace_pan_hispanism_title;Embrace Pan-Hispanism;;;;;;;;;;;;;x
