--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1512,3 +1512,10 @@ french_threat;Rising French Threat;;;;;;;;;;;;;x
 french_threat_desc;Our society is teetering on the brink of militarization as the French Power looms over the Continent;;;;;;;;;;;;;x
 outraged_europe_fra;Europe is Outraged;;;;;;;;;;;;;x
 outraged_europe_fra_desc;European Great Powers are alarmed at our gains and will hurdle together to try and contain us;;;;;;;;;;;;;x
+implementing_reforms;Implementing Reforms;;;;;;;;;;;;;x
+implementing_reforms_desc;We are currently trying to reform one of the key government aspects in our country;;;;;;;;;;;;;x
+political_crisis;Political Crisis;;;;;;;;;;;;;x
+political_crisis_desc;A political turmoil is widespread in the newly minted Union - it will take time to stabilize the situation.;;;;;;;;;;;;;x
+disorganized_union;Disorganized Union;;;;;;;;;;;;;x
+disorganized_union;Our country is governed by several legal and administrative systems, ranging from Napoleonic Code in France to decrepit 18th century laws in Spain and Italy.;;;;;;;;;;;;;x
+assimilation_technique_go_brr;Neolatin Standardization Center;;;;;;;;;;;;;x
