--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -69,6 +69,8 @@ byzantine_levant;Reclaimed Levant;;;;;;;;;x
 byzantine_egypt;Reclaimed Egypt;;;;;;;;;x
 byzantine_georgia;Reclaimed Caucasus;;;;;;;;;x
 mexican_louisiana;Reclaimed Louisiana;;;;;;;;;x
+spanish_louisiana;Reclaimed Louisiana;;;;;;;;;x
+pacific_reclamation_vns;Reclaimed Northwest-New Spain;;;;;;;;;x
 pan_hispanism;Pan-Hispanism Embraced;;;;;;;;;x
 pan_latinism;Pan-Latinism Embraced;;;;;;;;;x
 joined_lmu;Joined Latin Monetary Union;;;;;;;;;x
