--- a/TGC/localisation/00_events_0010000.csv
+++ b/TGC/localisation/00_events_0010000.csv
@@ -199,6 +199,17 @@ EVTOPTA10421;One Country, One Language;;;;;;;;;;;;;;x
 EVTDESC10422;Our intellectuals are working tirelessly to adopt the new grammatique standardization across our country both in official and school use. Departament of $PROVINCENAME$ reports successful application of the Neolatin standardization in the school curriculum.;;;;;;;;;;;;;x
 EVTNAME10422;One Country, One Language;;;;;;;;;;;;;;x
 EVTOPTA10422;Good work!;;;;;;;;;;;;;;x
+EVTOPTA10423;To Arms!;;;;;;;;;;;;;;x
+EVTDESC10424;In the last several years, ever since the Latin Union unification, ethnic tensions between French and Italian speaking citizens on one side, and German speaking majority in Switzerland on the other side have steadily turned to violence, and now to outright war. Eastern and Southern Cantons, French Romandie and Italian Ticino have declared independence and are asking for our help. Federalists in Bern are scrambling troops to put down rebellion, and @GCF German Confederation is nervously scrambling armies in case we intervene. Note: If you choose to intervene, to trigger the event chain, simply intervene on French side.;;;;;;;;;;;;;x
+EVTNAME10424;Ethnic Civil War in Switzerland;;;;;;;;;;;;;;x
+EVTOPTA10424;We shall help our brethren;;;;;;;;;;;;;;x
+EVTOPTB10424;This is not our concern.;;;;;;;;;;;;;;x
+EVTDESC10426;Now that the war is over, it is time to settle the question of Switzerland once and for all.;;;;;;;;;;;;;x
+EVTNAME10426;Germans Defeated;;;;;;;;;;;;;;x
+EVTOPTA10426;Integrate Romandie and Ticino, reconstitute neutral Switzerland in German-speaking cantons;;;;;;;;;;;;;;x
+EVTOPTB10426;Integrate Romandie and Ticino, annex Bern and Brig;;;;;;;;;;;;;;x
+EVTOPTC10426;Integrate Romandie and Ticino, annex Bern, Brig, Luzern, Basel;;;;;;;;;;;;;;x
+EVTOPTD10426;Annex entirety of Switzerland;;;;;;;;;;;;;;x
 EVTDESC11000;Sometimes the monarch just isn't there. Dying without a suitable or old enough heir, becoming incapable or senile while the government enters a deadlock. Sometimes the monarch is so ill that the government doesn't work and sometimes he's just away and someone incompetent was left to take care of things in his stead. Regardless of the reason, the $COUNTRY_ADJ$ government is currently going through a regency. We can expect some instability in the years ahead.;;;;;;;;;;;;;x
 EVTNAME11000;Regency;;;;;;;;;;;;;x
 EVTOPTA11000;Terrible news.;;;;;;;;;;;;;x
