--- a/TGC/localisation/00_events_0010000.csv
+++ b/TGC/localisation/00_events_0010000.csv
@@ -172,6 +172,7 @@ EVTOPTA10413;We must put an end to this.;;;;;;;;;;;;;x
 EVTDESC10414;$FROMCOUNTRY$ declares an intervention to dismantle the Latin Empire and joins the Eighth Coalition against us.;;;;;;;;;;;;;x
 EVTNAME10414;War of the Eighth Coalition;;;;;;;;;;;;;x
 EVTOPTA10414;Prepare the Army!;;;;;;;;;;;;;x
+EVTOPTB10414;This is not our concern;;;;;;;;;;;;;x
 EVTDESC10415;Last desperate defence of Paris was attempted, but it is all for naught -- enemy armies are roaming the country freely. We have been thrown out of Italy and Spain, and Germans have seized the Rhine. A ghastly reprisal of 1814 is happening before our eyes -- Paris has fallen.;;;;;;;;;;;;;x
 EVTNAME10415;All is Lost;;;;;;;;;;;;;x
 EVTOPTA10415;Maybe they will let me.. retire to.. an island?;;;;;;;;;;;;;x
