--- a/TGC/localisation/00_flags.csv
+++ b/TGC/localisation/00_flags.csv
@@ -75,3 +75,5 @@ pan_hispanism;Pan-Hispanism Embraced;;;;;;;;;x
 pan_latinism;Pan-Latinism Embraced;;;;;;;;;x
 joined_lmu;Joined Latin Monetary Union;;;;;;;;;x
 joined_lcu;Joined Latin Customs Union;;;;;;;;;x
+french_outside_italy;French-Lead Italy (Plombieres Vision);;;;;;;;;x
+austrian_outside_italy;Austrian-Lead Italy;;;;;;;;;x
