--- a/TGC/localisation/00_events_0010000.csv
+++ b/TGC/localisation/00_events_0010000.csv
@@ -211,6 +211,9 @@ EVTOPTA10426;Integrate Romandie and Ticino, reconstitute neutral Switzerland in 
 EVTOPTB10426;Integrate Romandie and Ticino, annex Bern and Brig;;;;;;;;;;;;;;x
 EVTOPTC10426;Integrate Romandie and Ticino, annex Bern, Brig, Luzern, Basel;;;;;;;;;;;;;;x
 EVTOPTD10426;Annex entirety of Switzerland;;;;;;;;;;;;;;x
+EVTDESC10429;A provisional government has been set up in Lisboa and several Portuguese regular army units have switched to our side, while Portuguese Royal Family flee the country. It is time to end hostilities and restore order in Iberia.;;;;;;;;;;;;;x
+EVTNAME10429;Portugal is Ours!;;;;;;;;;;;;;x
+EVTOPTA10429;We are one people!;;;;;;;;;;;;;x
 EVTDESC11000;Sometimes the monarch just isn't there. Dying without a suitable or old enough heir, becoming incapable or senile while the government enters a deadlock. Sometimes the monarch is so ill that the government doesn't work and sometimes he's just away and someone incompetent was left to take care of things in his stead. Regardless of the reason, the $COUNTRY_ADJ$ government is currently going through a regency. We can expect some instability in the years ahead.;;;;;;;;;;;;;x
 EVTNAME11000;Regency;;;;;;;;;;;;;x
 EVTOPTA11000;Terrible news.;;;;;;;;;;;;;x
