--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -2261,20 +2261,20 @@ FRA_colonial_company;Commissariat de France;x;
 FRA_dominion;Commissariat de France;x;
 FRA_ADJ;Français;x;
 ##### LTU #####;
-LTU_absolute_monarchy;Empire Latin;;;;;;;;;;;;;x
-LTU_prussian_constitutionalism;Empire Latin;;;;;;;;;;;;;x
-LTU_hms_government;Empire Latin;;;;;;;;;;;;;x
-LTU_absolute_monarchy2;Empire Latin;;;;;;;;;;;;;x
-LTU_prussian_constitutionalism2;Empire Latin;;;;;;;;;;;;;x
-LTU_hms_government2;Empire Latin;;;;;;;;;;;;;x
-LTU_democracy;Confederation Latin;x;
+LTU_absolute_monarchy;Empire Latin;x;
+LTU_prussian_constitutionalism;Empire Latin;x;
+LTU_hms_government;Empire Latin;x;
+LTU_absolute_monarchy2;Empire Latin;x;
+LTU_prussian_constitutionalism2;Empire Latin;x;
+LTU_hms_government2;Empire Latin;x;
+LTU_democracy;Confederation Latine;x;
 LTU_proletarian_dictatorship;Union de Republicas Socialistas Latinas;x;
-LTU_presidential_dictatorship;République Latin;x;
-LTU_bourgeois_dictatorship;République Latin;x;
-LTU_fascist_dictatorship;État Latin;x;
-LTU_colonial_company;Commissariat de Latin;x;
-LTU_dominion;Commissariat de Latin;x;
-LTU_ADJ;Latin;x;
+LTU_presidential_dictatorship;République Latine;x;
+LTU_bourgeois_dictatorship;République Latine;x;
+LTU_fascist_dictatorship;État Latine;x;
+LTU_colonial_company;Commissariat de Latine;x;
+LTU_dominion;Commissariat de Latine;x;
+LTU_ADJ;Latine;x;
 #### FRI ####;
 FRI_absolute_monarchy;Fryske Keninkryk;x;
 FRI_prussian_constitutionalism;Fryske Keninkryk;x;
