End game screen

--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -2280,8 +2280,8 @@ ENCOURAGEMENT_FOR;Encouragement for;Encouragement pour;;;;;;;;;;;;x
 END_GUARANTEE_EFFECT;§Y$COUNTRY$§W will end its guarantee to §Y$TARGET_COUNTRY$§W.\n;§Y$COUNTRY$§W va cesser de se porter garant pour §Y$TARGET_COUNTRY$§W.\n;;;;;;;;;;;;x
 END_NON_AGGRESSION_PACT_EFFECT;§Y$COUNTRY$§W will end a non-aggression pact with §Y$TARGET_COUNTRY$§W.\n;§Y$COUNTRY$§W va cesser d'appliquer le pacte de non agression signé avec §Y$TARGET_COUNTRY$§W.\n;;;;;;;;;;;;x
 END_WAR_EFFECT;§Y$COUNTRY$§W and §Y$TARGET_COUNTRY$§W will no longer be enemies§W.\n;§Y$COUNTRY$§W et §Y$TARGET_COUNTRY$§W ne vont plus être ennemis§W.\n;;;;;;;;;;;;x
-ENDGAME_DESC;One hundred Momentous years have passed, and we have entered the modern age. The world is a radically different place, how did your country do?;Cent ans ont passé et nous sommes entrés dans une ère moderne. Le monde est un endroit radicalement différent, comment cela s'est-il passé pour votre pays ?;;;;;;;;;;;;x
-ENDGAME_HEADLINE;Game Over;Game Over;;;;;;;;;;;;x
+ENDGAME_DESC;;;;;;;;;;;;;x
+ENDGAME_HEADLINE;;;;;;;;;;;;;x
 ENERGY_IS_ATLEAST_TRIGGER;Energy is at least §Y$VALUE$§W.\n;Il y a au moins §Y$VALUE$§W d'énergie.\n;;;;;;;;;;;;x
 ENERGY_IS_NOT_TRIGGER;Energy is not §Y$VALUE$§W.\n;L'énergie disponible n'est pas de §Y$VALUE$§W.\n;;;;;;;;;;;;x
 ENFORCE_DEMANDS_TRIGGER;These rebels will win if the following is true:;Si ce qui suit est vrai, ces rebelles l'emporteront :;;;;;;;;;;;;x
