--- a/TGC/localisation/00_events_0050000.csv
+++ b/TGC/localisation/00_events_0050000.csv
@@ -139,6 +139,13 @@ EVTOPTC50035;These few strips of contested land aren't worth the diplomatic cost
 EVTDESC55055;The Norwegians are not going to lease Bergen to Germany. Should the Germans try to act, we´ll defend Norway.;;;;;;;;;;;;;x
 EVTNAME55055;Norway will not lease Bergen to Germany;;;;;;;;;;;;;x
 EVTOPTA55055;Great!;;;;;;;;;;;;;x
+EVTNAME50090;Beyond the Rio Grande;;;;;;;;;;;;;x
+EVTDESC50090;Although the relative peace with Mexico after the Houston Treaty the tensions in the border never ceased completly. Recently a group of ranchers in look for their lost horses crossed the Rio Grande and were killed by the locals. Congresss proposes we take more land south of the Rio Grande!;;;;;;;;;;;;;x
+EVTOPTA50090;The mexicans must pay!;;;;;;;;;;;;;x
+EVTOPTB50090;Those fools should have just accepted their loss.;;;;;;;;;;;;;x
+EVTNAME50091;The Texan Destiny.;;;;;;;;;;;;;x
+EVTDESC50091;It is done, we're at war with Mexico!;;;;;;;;;;;;;x
+EVTOPTA50091;Good!;;;;;;;;;;;;;x
 EVTDESC56277;Now that Cuba is under Union authority once more, we must decide what to do with the rebellious rebel island. Some argue the island should be handed over the Afro-Cubano population and granted home rule. Others say military rule will continue to be necessary to keep the peace.;;;;;;;;;;;;;x
 EVTNAME56277;Order restored in Cuba;;;;;;;;;;;;;x
 EVTOPTA56277;We must give democracy a chance in Cuba;;;;;;;;;;;;;x
