--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -4477,11 +4477,11 @@ PLAYER_LOST_DESC;Player(s) $playername$ disconnected. Choose your action.;Joueur
 PLAYER_LOST_TITLE;Player disconnected.;Joueur déconnecté.;;;;;;;;;;;;x
 PLR_CONNECT;Player §Y$NAME$§W joined the game.;Le joueur §Y$NAME$§W a rejoint la partie.;;;;;;;;;;;;x
 PLR_DISC;Player §Y$NAME$§W left the game.;Le joueur §Y$NAME$§W a quitté la partie.;;;;;;;;;;;;x
-plurality;Plurality;Pluralité;;;;;;;;;;;;x
+plurality;Government Stability;Stabilité Gouvernementale;;;;;;;;;;;;x
 PLURALITY_CHANGE;Monthly Change;Changement mensuel;Monatliche Veränderung;;;;;;;;;;;x
-PLURALITY_EFFECT;$DIRECTION$ $VALUE$ Plurality.\n;$DIRECTION$ $VALUE$ en pluralité.\n;;;;;;;;;;;;x
-PLURALITY_EXPLANATION;Plurality is the shared level of consciousness in our country. The memories of the past victories and defeats in the name of liberty remind our people of what could be.;La pluralité correspond au niveau partagé de conscience nationale. Les souvenirs des victoires et défaites passées au nom de la liberté rappellent à notre peuple ce qui aurait pu arriver.;;;;;;;;;;;;x
-PLURALITY_TR;Plurality is at least §Y$VAL$§W.\n;La pluralité est d'au moins §Y$VAL$§W.\n;;;;;;;;;;;;x
+PLURALITY_EFFECT;$DIRECTION$ $VALUE$ Government Stability.\n;$DIRECTION$ $VALUE$ en Stabilité Gouvernementale.\n;;;;;;;;;;;;x
+PLURALITY_EXPLANATION;"Government Stability" represents the level of political cohesion and control within a ruling government, affecting the nation's overall efficiency and potential for unrest or revolt.;"Stabilité gouvernementale" représente le niveau de cohésion politique et de contrôle au sein d'un gouvernement au pouvoir, affectant l'efficacité globale de la nation ainsi que son potentiel d'instabilité ou de révolte;;;;;;;;;;;;x
+PLURALITY_TR;Government Stability is at least §Y$VAL$§W.\n;La Stabilité Gouvernementale est d'au moins §Y$VAL$§W.\n;;;;;;;;;;;;x
 po_destroy_forts;Destroy all forts in $STATE$.;;Zerstört alle Forts in $STATE$.;;;;;;;;;;;x
 po_destroy_naval_bases;Destroy naval base in $STATE$.;;Zersört den Marinestützpunkt in $STATE$ .;;;;;;;;;;;x
 po_disarmament;Prohibited from raising armies and lose §Y$PERCENTAGE$%§b of their forces for §Y$YEARS$§b years;N'a plus le droit de lever des armées et perd §Y$PERCENTAGE$%§b de ses forces pendant §Y$YEARS$§b ans;Verbot, Armeen auszuheben, und Verlust von §Y$PERCENTAGE$%§b ihrer Truppen für §Y$YEARS$§b Jahre.;;;;;;;;;;;x
