--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -4098,7 +4098,7 @@ NOT_MORE_THAN_MIL;Militancy below §Y$VAL$§W.\n;Militantisme inférieur à §Y$VAL$§
 NOT_MORE_THAN_NEEDS;Getting less than §Y$VAL$§W% of their §Y$TYPE$§W.\n;Obtention de moins de §Y$VAL$§W% de leurs besoins en §Y$TYPE$§W.;;;;;;;;;;;;x
 NOT_MORE_THAN_NEEDS_COST;Not enough money to cover §Y$VAL$§W% of needs.\n;Argent insuffisant pour couvrir §Y$VAL$§W% des besoins.;;;;;;;;;;;;x
 NOT_OWNED_BY;Is NOT owned by ;N'est PAS détenue par;;;;;;;;;;;;x
-NOT_PLURALITY_TR;Plurality is lower than §Y$VAL$§W.\n;La pluralité est inférieure à §Y$VAL$§W.\n;;;;;;;;;;;;x
+NOT_PLURALITY_TR;Gouvernement Stability is lower than §Y$VAL$§W.\n;La Stabilité Gouvernementale est inférieure à §Y$VAL$§W.\n;;;;;;;;;;;;x
 NOT_POLITICAL_MOVEMENT_STRENGTH_TR;Political movement strength is lower than §Y$VAL$§W.\n;Mouvement politique dont la force est inférieure à §Y$VAL$§W.\n;;;;;;;;;;;;x
 NOT_POP_UNEMPLOYMENT_HIGHER_THAN;§Y$TYPE$§W unemployment below §Y$VAL$§W%;Chômage §Y$TYPE$§W inférieur à §Y$VAL$§W%;;;;;;;;;;;;x
 NOT_POSSIBLE_CAUSE;Not possible because the following isn't true.;Impossible parce que les éléments suivants sont faux.;;;;;;;;;;;;x
@@ -5670,7 +5670,7 @@ TECH_ONCE_LOG;Research of $TYPE$ finished.;La recherche de $TYPE$ est terminée.;
 TECH_ONCE_MAP;*;*;;;;;;;;;;;;x
 TECH_ONCE_SETUP;When a major technology has been researched.;Si technologie importante a été étudiée.;;;;;;;;;;;;x
 TECH_OUTPUT;production output;rendement de la production;;;;;;;;;;;;x
-TECH_PLURALITY;Plurality;Pluralité;;;;;;;;;;;;x
+TECH_PLURALITY;Government Stability;Stabilité Gouvernementale;;;;;;;;;;;;x
 TECH_POP_GROWTH;Pop Growth;Croissance démographique;;;;;;;;;;;;x
 TECH_REBEL_ORG_GAIN;Rebel power gain;;;;;;;;;;;;;x
 TECH_REPEAT_1;$TYPE$ Advance!;$TYPE$ améliorés !;;;;;;;;;;;;x
