--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3453,3 +3453,7 @@ plombieres2_desc;The French Emperor Napoleon III is keen to settle the ‘Italian 
 plombieres2_title;Accordi di Plombières;;;;;;;;;;;;;x
 paris_congress_ltu_desc;German Hegemony in Europe is certain if we do not unite to stop them! We cannot allow minor political and lingustical obstacles to prevent us from survival. We fully embrace Pan-Latinism, so we can counter Pan-Germanism. Citizens, man your barricades!;;;;;;;;;;;;;x
 paris_congress_ltu_title;$YEAR$ Congress of Paris;;;;;;;;;;;;;x
+push_further_west_title;Claim the Frontier;;;;;;;;;;;;;x
+push_further_west_desc;Even with the Rio Grande Dividing us from the savagery west of it, border skirmishes are still common between our settlers, mexicans and natives, we can use this as an excuse to claim the sparsely-populated west;;;;;;;;;;;;;x
+houston_treaty_title;The Houston Treaty of $YEAR$;;;;;;;;;;;;;x
+houston_treaty_desc;With our recent victory in the American West we can force the mexicans to renounce their claims to the region;;;;;;;;;;;;;x
