California unification events
Makes the Texas gameplay less RNG dependant

--- a/TGC/localisation/00_events_0050000.csv
+++ b/TGC/localisation/00_events_0050000.csv
@@ -146,6 +146,12 @@ EVTOPTB50090;Those fools should have just accepted their loss.;;;;;;;;;;;;;x
 EVTNAME50091;The Texan Destiny.;;;;;;;;;;;;;x
 EVTDESC50091;It is done, we're at war with Mexico!;;;;;;;;;;;;;x
 EVTOPTA50091;Good!;;;;;;;;;;;;;x
+EVTNAME50092;The Star And The Bear;;;;;;;;;;;;;x
+EVTDESC50092;Our recent rise to power in the american continent and our great relations with California have brought them into our influence;;;;;;;;;;;;;x
+EVTOPTA50092;Good!;;;;;;;;;;;;;x
+EVTNAME50093;The Californian unification;;;;;;;;;;;;;x
+EVTDESC50093;The Californian people have decided to join Texas!;;;;;;;;;;;;;x
+EVTOPTA50093;The Lone Star is not so lonely anymore!;;;;;;;;;;;;;x
 EVTDESC56277;Now that Cuba is under Union authority once more, we must decide what to do with the rebellious rebel island. Some argue the island should be handed over the Afro-Cubano population and granted home rule. Others say military rule will continue to be necessary to keep the peace.;;;;;;;;;;;;;x
 EVTNAME56277;Order restored in Cuba;;;;;;;;;;;;;x
 EVTOPTA56277;We must give democracy a chance in Cuba;;;;;;;;;;;;;x
