Punctation of Olmutz
- Punctation of Olmutz event for Prussia in 1850. If German Revolution failed, Prussia will be restricted from further German unification for 10 years
- Nerfed German Revolution setbacks upon forming, buffed Latin Union setbacks upon formation

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1521,3 +1521,5 @@ political_crisis_desc;A political turmoil is widespread in the newly minted Unio
 disorganized_union;Disorganized Union;;;;;;;;;;;;;x
 disorganized_union;Our country is governed by several legal and administrative systems, ranging from Napoleonic Code in France to decrepit 18th century laws in Spain and Italy.;;;;;;;;;;;;;x
 assimilation_technique_go_brr;Neolatin Standardization Center;;;;;;;;;;;;;x
+punctation_of_olmutz;Punctation of Olmutz;;;;;;;;;;;;;x
+punctation_of_olmutz_desc;Backed into a corner by other Great Powers, we had to abandon ambitions of leading Germany, for now.;;;;;;;;;;;;;x
