--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1505,7 +1505,8 @@ research_campaign;Active Research Campaign;;;;;;;;;;;;;x
 research_campaign_desc;We are currently focusing part of our annual budget on funding more research for our country. §YCampaign Cost:§! Roughly §R2.5%§! of your maximum daily tax income, scaled by country size, every month.;;;;;;;;;;;;;x
 church_property_confiscation;Church Property Confiscated;;;;;;;;;;;;;x
 church_property_confiscation_desc;We are fixing our budget holes with the property of the Catholic Church and its monasteries;;;;;;;;;;;;;x
-soldier_fix;Recently called up reservists;;;;;;;;;;;;;x
+soldier_fix;Recent Reservits;;;;;;;;;;;;;x
+soldier_fix;We just recently called up the reservists;;;;;;;;;;;;;x
 arch_museum;Archaeological Museum;;;;;;;;;;;;;x
 arch_museum_desc;This city holds an marvellous Archaeological Museum;;;;;;;;;;;;;x
 latin_customs_union;Latin Customs Union;;;;;;;;;;;;;x
