--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1524,3 +1524,5 @@ disorganized_union;Our country is governed by several legal and administrative s
 assimilation_technique_go_brr;Neolatin Standardization Center;;;;;;;;;;;;;x
 punctation_of_olmutz;Punctation of Olmutz;;;;;;;;;;;;;x
 punctation_of_olmutz_desc;Backed into a corner by other Great Powers, we had to abandon ambitions of leading Germany, for now.;;;;;;;;;;;;;x
+militarization_of_society;Militarization of Society;;;;;;;;;;;;;x
+militarization_of_society_desc;Militarizing our society;;;;;;;;;;;;;x
