--- a/TGC/localisation/00_events_0050000.csv
+++ b/TGC/localisation/00_events_0050000.csv
@@ -140,12 +140,9 @@ EVTDESC55055;The Norwegians are not going to lease Bergen to Germany. Should the
 EVTNAME55055;Norway will not lease Bergen to Germany;;;;;;;;;;;;;x
 EVTOPTA55055;Great!;;;;;;;;;;;;;x
 EVTNAME50090;Beyond the Rio Grande;;;;;;;;;;;;;x
-EVTDESC50090;Although the relative peace with Mexico after the Houston Treaty the tensions in the border never ceased completly. Recently a group of ranchers in look for their lost horses crossed the Rio Grande and were killed by the locals. Congresss proposes we take more land south of the Rio Grande!;;;;;;;;;;;;;x
+EVTDESC50090;Although the relative peace with Mexico after the Houston Treaty the tensions in the border never ceased completly. Recently a group of ranchers in look for their lost horses crossed the Rio Grande and were killed by the locals. Congresss proposes we claim more land south of the Rio Grande!;;;;;;;;;;;;;x
 EVTOPTA50090;The mexicans must pay!;;;;;;;;;;;;;x
 EVTOPTB50090;Those fools should have just accepted their loss.;;;;;;;;;;;;;x
-EVTNAME50091;The Texan Destiny.;;;;;;;;;;;;;x
-EVTDESC50091;It is done, we're at war with Mexico!;;;;;;;;;;;;;x
-EVTOPTA50091;Good!;;;;;;;;;;;;;x
 EVTNAME50092;The Star And The Bear;;;;;;;;;;;;;x
 EVTDESC50092;Our recent rise to power in the american continent and our great relations with California have brought them into our influence;;;;;;;;;;;;;x
 EVTOPTA50092;Good!;;;;;;;;;;;;;x
