Golden Circle quest start
Inherit CSA

--- a/TGC/localisation/00_events_0050000.csv
+++ b/TGC/localisation/00_events_0050000.csv
@@ -149,6 +149,10 @@ EVTOPTA50092;Good!;;;;;;;;;;;;;x
 EVTNAME50093;The Californian unification;;;;;;;;;;;;;x
 EVTDESC50093;The Californian people have decided to join Texas!;;;;;;;;;;;;;x
 EVTOPTA50093;The Lone Star is not so lonely anymore!;;;;;;;;;;;;;x
+EVTNAME50094;Our brothers in the south;;;;;;;;;;;;;x
+EVTDESC50094;We were always close to our confederate neighbours after their independence. Some of the most influential people there have a dream of creating a "golden circle" and think joining up with Texas would be the best way to accomplish those goals. Of course there would be international outrage and we will need to make some concessions to the new confederates to annex them.;;;;;;;;;;;;;x
+EVTOPTA50094;The idea of this golden circle seems interesting...;;;;;;;;;;;;;x
+EVTOPTB50094;Let us kindly refuse this offer;;;;;;;;;;;;;x
 EVTDESC56277;Now that Cuba is under Union authority once more, we must decide what to do with the rebellious rebel island. Some argue the island should be handed over the Afro-Cubano population and granted home rule. Others say military rule will continue to be necessary to keep the peace.;;;;;;;;;;;;;x
 EVTNAME56277;Order restored in Cuba;;;;;;;;;;;;;x
 EVTOPTA56277;We must give democracy a chance in Cuba;;;;;;;;;;;;;x
