Rewriting the Texas event
Now it seems lbetter

--- a/TGC/localisation/00_events_0050000.csv
+++ b/TGC/localisation/00_events_0050000.csv
@@ -150,7 +150,7 @@ EVTNAME50093;The Californian unification;;;;;;;;;;;;;x
 EVTDESC50093;The Californian people have decided to join Texas!;;;;;;;;;;;;;x
 EVTOPTA50093;The Lone Star is not so lonely anymore!;;;;;;;;;;;;;x
 EVTNAME50094;Our brothers in the south;;;;;;;;;;;;;x
-EVTDESC50094;We were always close to our confederate neighbours after their independence. Some of the most influential people there have a dream of creating a "golden circle" and think joining up with Texas would be the best way to accomplish those goals. Of course there would be international outrage and we will need to make some concessions to the new confederates to annex them.;;;;;;;;;;;;;x
+EVTDESC50094;Since 1854 a group called "Knights of the Golden Circle" was formed in Ciccinati, they gained a lot of influence and power after the American Civil War. Today some envoys from their order arrived in Houston, they believe the only way to achieve their dream of the "Golden Circle" lays within Texas, the order is willing to influence the population and congress into accepting incorporation into Texas, of course we will need to make small concessions to the new territories.
 EVTOPTA50094;The idea of this golden circle seems interesting...;;;;;;;;;;;;;x
 EVTOPTB50094;Let us kindly refuse this offer;;;;;;;;;;;;;x
 EVTDESC56277;Now that Cuba is under Union authority once more, we must decide what to do with the rebellious rebel island. Some argue the island should be handed over the Afro-Cubano population and granted home rule. Others say military rule will continue to be necessary to keep the peace.;;;;;;;;;;;;;x
