Buying Cuba + small fix

--- a/TGC/localisation/00_events_0050000.csv
+++ b/TGC/localisation/00_events_0050000.csv
@@ -150,9 +150,31 @@ EVTNAME50093;The Californian unification;;;;;;;;;;;;;x
 EVTDESC50093;The Californian people have decided to join Texas!;;;;;;;;;;;;;x
 EVTOPTA50093;The Lone Star is not so lonely anymore!;;;;;;;;;;;;;x
 EVTNAME50094;Our brothers in the south;;;;;;;;;;;;;x
-EVTDESC50094;Since 1854 a group called "Knights of the Golden Circle" was formed in Ciccinati, they gained a lot of influence and power after the American Civil War. Today some envoys from their order arrived in Houston, they believe the only way to achieve their dream of the "Golden Circle" lays within Texas, the order is willing to influence the population and congress into accepting incorporation into Texas, of course we will need to make small concessions to the new territories.
+EVTDESC50094;Since 1854 a group called "Knights of the Golden Circle" was formed in Ciccinati, they gained a lot of influence and power after the American Civil War. Today some envoys from their order arrived in Houston, they believe the only way to achieve their dream of the "Golden Circle" lays within Texas, the order is willing to influence the population and congress into accepting incorporation into Texas, of course we will need to make small concessions to the new territories.;;;;;;;;;;;;;x
 EVTOPTA50094;The idea of this golden circle seems interesting...;;;;;;;;;;;;;x
 EVTOPTB50094;Let us kindly refuse this offer;;;;;;;;;;;;;x
+EVTNAME50095;The Texan proposal;;;;;;;;;;;;;x
+EVTDESC50095;Since the Napoleonic wars our empire lost almost all of its colonies in the americas except Cuba and Puerto Rico. Today a envoy from Houston arrived, proposing we sell our last posessions to them. Refusing may lead to war, what should we do?;;;;;;;;;;;;;x
+EVTOPTA50095;Unfortunately nothing ever lasts forever...;;;;;;;;;;;;;x
+EVTOPTB50095;The caribbean is still a vital part of Spain!
+EVTNAME50096;They accept;;;;;;;;;;;;;x
+EVTDESC50096;Spain accepted!;;;;;;;;;;;;;x
+EVTOPTA50096;We will all go down to Havana, Hurray Hurray!;;;;;;;;;;;;;x
+EVTNAME50097;They refuse;;;;;;;;;;;;;x
+EVTDESC50097;They refused our generous proposal. But what you cannot win at diplomacy you may win at gunpoint. Should we go to war with Spain?;;;;;;;;;;;;;x
+EVTOPTA50097;Live by the sword, die by the sword;;;;;;;;;;;;;x
+EVTOPTB50097;It's not worth it anyway.;;;;;;;;;;;;;x
+EVTNAME50098;The Knights ride triumphantly;;;;;;;;;;;;;x
+EVTDESC50098;Today is a great day for all of Texas, we have successfully defeated the spanish and seized their colonies!;;;;;;;;;;x
+EVTOPTA50098;Great!;;;;;;;;;;;;;x
+EVTNAME50099;The Dream Is Dead;;;;;;;;;;;;;x
+EVTDESC50099;We have lost the war and our hopes of a golden circle, we were forced to get retract all of our claims to the lands.;;;;;;;;;;x
+EVTOPTA50099;What a shame...;;;;;;;;;;;;;x
+EVTNAME50100;The acquisition of Cuba and Puerto Rico;;;;;;;;;;;;;x
+EVTDESC50100;With our newfound partners, the Knights of the Golden Circle in a meeting proposed we buy Cuba and Puerto Rico from Spain's declining empire, this would be a step in the direction of the golden circle.
+EVTOPTA50100;Let's make a offer to Spain;;;;;;;;;;;;;x
+EVTOPTB50100;Not now.;;;;;;;;;;;;;x
+EVTOPTC50100;It's not worth our effort, never show this idea ever again!;;;;;;;;;;;;;x
 EVTDESC56277;Now that Cuba is under Union authority once more, we must decide what to do with the rebellious rebel island. Some argue the island should be handed over the Afro-Cubano population and granted home rule. Others say military rule will continue to be necessary to keep the peace.;;;;;;;;;;;;;x
 EVTNAME56277;Order restored in Cuba;;;;;;;;;;;;;x
 EVTOPTA56277;We must give democracy a chance in Cuba;;;;;;;;;;;;;x
