--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -224,7 +224,7 @@ CRI_ADJ;Crimean;Criméen;Krim;;;;;;;;;;;x
 CRL_ADJ;Chitrali;;;;;;;;;;;;;x
 CRO_ADJ;Croatian;Croate;Kroatisch;;;;;;;;;;;x
 CRS_ADJ;Corsican;;;;;;;;;;;;;x
-CRT_ADJ;Entrerriano;;;;;;;;;;;;;x
+CRT_ADJ;Correntinian;;;;;;;;;;;;;x
 CSA_ADJ;Confederate;Confédéré;Konföderiert;;;;;;;;;;;x
 CTC_ADJ;Catamarcan;;;;;;;;;;;x
 CUB_ADJ;Cuban;Cubain;Kubanisch;;;;;;;;;;;x
@@ -348,7 +348,7 @@ ENG_ADJ;British;Britannique;Britisch;;;;;;;;;;;x
 ENG_fascist_dictatorship_ADJ;British;Britannien;Britisch;;;;;;;;;;;x
 ENG_proletarian_dictatorship_ADJ;British;Britannique;Britisch;;;;;;;;;;;x
 ENL_ADJ;English;;;;;;;;;;;;;x
-ENT_ADJ;Entrerriano;;;;;;;;;;;;;x
+ENT_ADJ;Entrerrian;;;;;;;;;;;;;x
 EPI_ADJ;Epirote;Epirote;Epirote;;;;;;;;;;;x
 EQG_ADJ;Equatoguinean;;;;;;;;;;;;;x
 EQG_absolute_monarchy_ADJ;Mokian;;;;;;;;;;;;;x
