Conquest of Mexico first draft
I will probably rewrite that later

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3457,3 +3457,5 @@ push_further_west_title;Claim the Frontier;;;;;;;;;;;;;x
 push_further_west_desc;Even with the Rio Grande Dividing us from the savagery west of it, border skirmishes are still common between our settlers, mexicans and natives, we can use this as an excuse to claim the sparsely-populated west;;;;;;;;;;;;;x
 houston_treaty_title;The Houston Treaty of $YEAR$;;;;;;;;;;;;;x
 houston_treaty_desc;With our recent victory in the American West we can force the mexicans to renounce their claims to the region;;;;;;;;;;;;;x
+conquer_mexico_title;The Conquest Of Mexico;;;;;;;;;;;;;x
+conquer_mexico_desc;With our recent success in Cuba we have gained the internal support for a final invasion of Mexico through some dubious claims, but you must remember that the international community will not respond favorably to our actions;;;;;;;;;;;;;x
