--- a/TGC/localisation/00_events_0050000.csv
+++ b/TGC/localisation/00_events_0050000.csv
@@ -171,10 +171,13 @@ EVTNAME50099;The Dream Is Dead;;;;;;;;;;;;;x
 EVTDESC50099;We have lost the war and our hopes of a golden circle, we were forced to get retract all of our claims to the lands.;;;;;;;;;;x
 EVTOPTA50099;What a shame...;;;;;;;;;;;;;x
 EVTNAME50100;The acquisition of Cuba and Puerto Rico;;;;;;;;;;;;;x
-EVTDESC50100;With our newfound partners, the Knights of the Golden Circle in a meeting proposed we buy Cuba and Puerto Rico from Spain's declining empire, this would be a step in the direction of the golden circle.
+EVTDESC50100;With our newfound partners, the Knights of the Golden Circle in a meeting proposed we buy Cuba and Puerto Rico from Spain's declining empire, this would be a step in the direction of the golden circle.;;;;;;;;;;;;;x
 EVTOPTA50100;Let's make a offer to Spain;;;;;;;;;;;;;x
 EVTOPTB50100;Not now.;;;;;;;;;;;;;x
 EVTOPTC50100;It's not worth our effort, never show this idea ever again!;;;;;;;;;;;;;x
+EVTNAME50101;The Conquest Of Mexico;;;;;;;;;;;;;x
+EVTDESC50101;Our republic has been in a struggle with Mexico over territory since it's very founding. Because of our multiple victories over the mexicans over the years and our recent ventures in the caribbean, we have enough strenght to put a end to the mexican state as a whole.;;;;;;;;;;;;;x
+EVTOPTA50101;Foward, to glory!!!;;;;;;;;;;;;;x
 EVTDESC56277;Now that Cuba is under Union authority once more, we must decide what to do with the rebellious rebel island. Some argue the island should be handed over the Afro-Cubano population and granted home rule. Others say military rule will continue to be necessary to keep the peace.;;;;;;;;;;;;;x
 EVTNAME56277;Order restored in Cuba;;;;;;;;;;;;;x
 EVTOPTA56277;We must give democracy a chance in Cuba;;;;;;;;;;;;;x
