Finishing touches for now

--- a/TGC/localisation/00_events_0050000.csv
+++ b/TGC/localisation/00_events_0050000.csv
@@ -178,6 +178,12 @@ EVTOPTC50100;It's not worth our effort, never show this idea ever again!;;;;;;;;
 EVTNAME50101;The Conquest Of Mexico;;;;;;;;;;;;;x
 EVTDESC50101;Our republic has been in a struggle with Mexico over territory since it's very founding. Because of our multiple victories over the mexicans over the years and our recent ventures in the caribbean, we have enough strenght to put a end to the mexican state as a whole.;;;;;;;;;;;;;x
 EVTOPTA50101;Foward, to glory!!!;;;;;;;;;;;;;x
+EVTNAME50102;The Sick man of America Has Been Put To Rest;;;;;;;;;;;;;x
+EVTDESC50102;We have triumphantly defeated the mexicans for good. We are one step closer to our destiny now! \n Although the mexicans are not happy with us....;;;;;;;;;;;;;x
+EVTOPTA50102;Cheer, boys, cheer! For Country Mother Country!;;;;;;;;;;;;;x
+EVTNAME50103;The sick man of America has recovered!;;;;;;;;;;;;;x
+EVTDESC50103;Many texan jokingly said that Mexico was the "Sick man of America" after our rise to power in the american continent. But we have underestimated them, they defeated our troops and killed any dreams of a golden circle within our country;;;;;;;;;;;;;x
+EVTOPTA50103;What a humiliating defeat...;;;;;;;;;;;;;x
 EVTDESC56277;Now that Cuba is under Union authority once more, we must decide what to do with the rebellious rebel island. Some argue the island should be handed over the Afro-Cubano population and granted home rule. Others say military rule will continue to be necessary to keep the peace.;;;;;;;;;;;;;x
 EVTNAME56277;Order restored in Cuba;;;;;;;;;;;;;x
 EVTOPTA56277;We must give democracy a chance in Cuba;;;;;;;;;;;;;x
