CBs adjusted, new loc and puppet break away

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -837,3 +837,11 @@ EVTOPTB6203;Let the word be know!;;;;;;;;;;;;;x
 EVTDESC6209;Income updater trigger;;;;;;;;;;;;;x
 EVTNAME6209;Money;;;;;;;;;;;;;x
 EVTOPTA6209;Money;;;;;;;;;;;;;x
+EVTNAME7000;A opportunity to freedom;;;;;;;;;;;;;x
+EVTDESC7000;Our overlords are crumbling apart, that's the perfect opportunity to seize power of our own land and push away their influence! Why allow us to be controlled if they can barely control they very own land?;;;;;;;;;;;;;x
+EVTOPTA7000;Freedom!;;;;;;;;;;;;;x
+EVTOPTB7000;You mean betrayal?;;;;;;;;;;;;;x
+EVTNAME7010;Our Empire Crumbles!;;;;;;;;;;;;;x
+EVTDESC7010;We have just received the news that $FROMCOUNTRY$ has declared its independence and broken away from our control. Despite our efforts to maintain stability and unity the region, their secession was inevitable due to the internal conflicts and external pressures that have plagued our nation. This event serves as a stark reminder that a strong and united government is essential to prevent such incidents from happening in the future.;;;;;;;;;;;;;x
+EVTOPTA7010;Our current situation demands sacrifices. Leave them be.;;;;;;;;;;;;;x
+EVTOPTB7010;Inacceptable!;;;;;;;;;;;;;x
