Base for rich corrupt societies

--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -4545,7 +4545,7 @@ POLITICS_PEOPLE_CHART_TOOLTIP;$PERCENT$% of our population are $IDEOLOGY$\n;$PER
 POLITICS_PEOPLE_IDEOLOGIES;Peoples' Ideologies;Idéol. de la population;;;;;;;;;;;;x
 POLITICS_PLURALITY_TOOLTIP;Our plurality is $PERCENT$%.\n;Notre pluralité est de $PERCENT$ %.\n;;;;;;;;;;;;x
 POLITICS_POLITICAL_REFORMS;Political Reforms;Réformes politiques;;;;;;;;;;;;x
-POLITICS_REBELS;Rebels;Rebelles;;;;;;;;;;;;x
+POLITICS_REBELS;Rebels and Corruption;Rebelles;;;;;;;;;;;;x
 POLITICS_REFORMS;Reforms;Réformes;;;;;;;;;;;;x
 POLITICS_RELEASE_NATIONS;Release Nations;Nations libérables;;;;;;;;;;;;x
 POLITICS_RELEASE_VASSAL;Release Nation;Libérer une nation;;;;;;;;;;;;x
