--- a/TGC/localisation/00_war-rebels.csv
+++ b/TGC/localisation/00_war-rebels.csv
@@ -92,6 +92,6 @@ unciv_reactionary_rebels_desc;Reactionary rebels long to live in the traditional
 unciv_reactionary_rebels_name;$COUNTRY$ Reactionaries;Réactionnaires de $COUNTRY$;$COUNTRY$ Reaktionäre;;;;;;;;;;;x
 unciv_reactionary_rebels_title;Reactionary;Réactionnaire;Reaktionär;;;;;;;;;;;x
 intelligentsia_army;You should NEVER be seeing this, ping wyrm at the discord server;;;;;;;;;;;;;x
-intelligentsia_rebels_desc;Corrupt Intellectuals, Landowners and other members of the elites plotting against the country from within. While they probably won't revolt or go to arms, they instead try to influence our country to their personal gain or political purposes, which can be as hurtful to our society as open revolts.;;;;;;;;;;;;;x
-intelligentsia_rebels_name;Corrupt Intelligentsia;;;;;;;;;;;;;x
-intelligentsia_rebels_title;Corrupt Intelligentsia;;;;;;;;;;;;;x
+intelligentsia_desc;Corrupt Intellectuals, Landowners and other members of the elites plotting against the country from within. While they probably won't revolt or go to arms, they instead will try to influence our country to their personal gain or political purposes, which can be as hurtful to our society as open revolts.;;;;;;;;;;;;;x
+intelligentsia_name;Corrupt Intelligentsia;;;;;;;;;;;;;x
+intelligentsia_title;Corrupt Intelligentsia;;;;;;;;;;;;;x
