--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -6818,7 +6818,7 @@ TEX_presidential_dictatorship;Texan Republic;x;
 TEX_bourgeois_dictatorship;Texan Republic;x;
 TEX_fascist_dictatorship;Free Texan State;x;
 TEX_colonial_company;Territory of Texas;x;
-TEX_dominion;Territory of Texas;x;
+TEX_dominion;Commonwealth of Louisiana;x;
 TEX_ADJ;Texan;x;
 #### TGA ####;
 TGA_absolute_monarchy;Pule'anga Fakatu'i 'o Tonga;x;
