--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -457,7 +457,7 @@ FRM_prussian_constitutionalism;Duchy of Frankfurt;;;;;;;;;;;;;x
 FSA_absolute_monarchy;Free American Empire;;;;;;;;;;;;;x
 FSA_proletarian_dictatorship;Free American Republic;;;;;;;;;;;;;x
 FSA_prussian_constitutionalism;Free American Empire;;;;;;;;;;;;;x
-FSA_dominion;Dominion of Virginia;;;;;;;;;;;;;x
+FSA_dominion;Commonwealth of Virginia;;;;;;;;;;;;;x
 GAZ_absolute_monarchy;Gaza Empire;;;;;;;;;;;;;x
 GBU_absolute_monarchy;Kaabu Empire;;;;;;;;;;;;;x
 GBU_democracy;Guinea-Bissau;;;;;;;;;;;;;x
@@ -1493,7 +1493,7 @@ URU_prussian_constitutionalism;Cisplatina;;;;;;;;;;;;;x
 USA_absolute_monarchy;American Empire;;;;;;;;;;;;;x
 USA_bourgeois_dictatorship;United States of America;États-Unis;;;;;;;;;;;;x
 USA_democracy;United States of America;États-Unis;;;;;;;;;;;;x
-USA_dominion;Dominion of Virginia;;;;;;;;;;;;;x
+USA_dominion;Commonwealth of Virginia;;;;;;;;;;;;;x
 USA_fascist_dictatorship;United States of America;États-Unis;;;;;;;;;;;;x
 USA_hms_government;Kingdom of America;;;;;;;;;;;;;x
 USA_presidential_dictatorship;United States of America;États-Unis;;;;;;;;;;;;x
