--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -2044,6 +2044,8 @@ occupy_misiones_desc;For a long time, the Province of Misiones had a central pla
 occupy_misiones_title;The Occupation of Misiones;;;;;;;;;;;;;x
 occupy_miskito_desc;Historically a British colony and protectorate, the Miskito Coast was claimed by $COUNTRY$ and later granted self-rule under $COUNTRY$ by King George Augustus Fredric II, who accepted the change on condition that he should retain his local authority, and receive a yearly subvention of a thousand pounds until 1870. On his death in 1865, his successor, William Henry Clarence, wasn’t recognized by our government and with their allies and protectors far away, organizing a quick invasion and occupation of the territory who rightfully belongs to our country should be an easy affair.;;;;;;;;;;;;;x
 occupy_miskito_title;Annex the Miskito Reserve;;;;;;;;;;;;;x
+october_manifesto_desc;The October Manifesto was written by Sergei Witte and granted basic personal freedoms and created an elected parliament called Duma. Such reforms can appease the population while maintaining the power of the aristocracy and give us the time to begin a swift counterrevolution.;;;;;;;;;;;;;x
+october_manifesto_title;The October Manifesto;;;;;;;;;;;;;x
 offer_to_buy_cuba_desc;With the recent unrest in Cuba, the prospect of the Spanish government possibly selling the island to the United States has arisen. Should we attempt to pursue negotiations?;;;;;;;;;;;;;x
 offer_to_buy_cuba_title;Offer to Buy Cuba;;;;;;;;;;;;;x
 oman_protectorate_desc;In order to deny other European rivals from having any influence in the Gulf, we should further increase our influence in the Sultanate of Muscat and Oman.;;;;;;;;;;;;;x
